<resources>
    <string name="app_name">Fashionly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"/>
    <string name="nav_header_subtitle">Fashionly</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Your Fits</string>
    <string name="menu_inspiration">Explore Fashion</string>
    <string name="menu_your_posts">Your Posts</string>
    <string name="menu_favorites">Saved Fits</string>
    <string name="menu_about">About</string>

    <string name="add_photo_button">Add Photo</string>

    <!-- AboutFragment -->
    <string name="about_purpose">This app is designed to inspire fashion creativity by letting
        users anonymously share, discover, and save unique outfit ideas.
        For questions reach me at: chromx.developer@gmail.com
    </string>

</resources>