<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inspiration"
            android:icon="@drawable/ic_menu_inspiration"
            android:title="@string/menu_inspiration" />
        <item
            android:id="@+id/nav_your_posts"
            android:icon="@drawable/ic_menu_your_posts"
            android:title="@string/menu_your_posts" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_inspiration_save"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>