<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fashionapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inspiration"
        android:name="com.example.fashionapp.ui.inspiration.InspirationFragment"
        android:label="@string/menu_inspiration"
        tools:layout="@layout/fragment_inspiration" />

    <fragment
        android:id="@+id/nav_your_posts"
        android:name="com.example.fashionapp.ui.your_posts.YourPostsFragment"
        android:label="@string/menu_your_posts"
        tools:layout="@layout/fragment_your_posts" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.fashionapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.fashionapp.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>